[package]
name = "mr-deeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.30.5"
# rusqlite = "0.31.0"
serde_json = "1.0.115"

# [target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }

# [target.'cfg(unix)'.dependencies]
# rusqlite = "0.31.0"